Change Puppet specification in Gemfile
Allow pessimistic versions to be passed in for Puppet. So that Travis matrix
builds can test against the latest in each major series. The default has
been set to anything in the 3.2.x series. Travis should then be responsible
for testing later versions (like HEAD).

--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -1,10 +1,9 @@
 source 'https://rubygems.org'
 
-if ENV.key?('PUPPET_VERSION')
-  puppetversion = "= #{ENV['PUPPET_VERSION']}"
-else
-  puppetversion = ['>= 2.7']
-end
+# Versions can be overridden with environment variables for matrix testing.
+# Travis will remove Gemfile.lock before installing deps.
+
+gem 'puppet', ENV['PUPPET_VERSION'] || '~> 3.2.0'
 
 gem 'rake'
 gem 'puppet-lint'
@@ -12,4 +11,3 @@ gem 'rspec-puppet'
 gem 'rspec-system-puppet'
 gem 'puppetlabs_spec_helper'
 gem 'puppet-syntax'
-gem 'puppet', puppetversion
