Test against each Puppet series
Will pick the latest version from 2.7.x, 3.1.x and 3.2.x

I'm skipping 3.0.x as it was the bratty child of the 3.x series and doesn't
appear to have received as much adoption. We also experienced some real
problems with testing frameworks on 3.x at the time.

--- a/skeleton/.travis.yml
+++ b/skeleton/.travis.yml
@@ -8,5 +8,6 @@ rvm:
 script: bundle exec rake spec
 env:
   matrix:
-  - PUPPET_VERSION=2.7.23
-  - PUPPET_VERSION=3.1.1
+  - PUPPET_VERSION="~> 2.7.0"
+  - PUPPET_VERSION="~> 3.1.0"
+  - PUPPET_VERSION="~> 3.2.0"
