Add :test rake task for {syntax,lint,spec}
Add a rake task/alias to call the most common test tasks in the correct
order. Make TravisCI run this on all tests.

Unfortunately we can't define :default because it has been claimed by
puppetlabs_spec_helper to print out the list of available tasks. Or rather,
we can, but the output looks messy.

--- a/skeleton/Rakefile
+++ b/skeleton/Rakefile
@@ -11,3 +11,10 @@ PuppetLint.configuration.log_format = "%{path}:%{linenumber}:%{check}:%{KIND}:%{
 PuppetLint.configuration.send('disable_class_parameter_defaults')
 
 PuppetSyntax.exclude_paths = ["pkg/**/*"]
+
+desc "Run syntax, lint, and spec tests."
+task :test => [
+  :syntax,
+  :lint,
+  :spec,
+]
