--- a/skeleton/.travis.yml
+++ b/skeleton/.travis.yml
@@ -2,7 +2,7 @@
 # Verify this with: http://lint.travis-ci.org/
 language: ruby
 before_install: rm Gemfile.lock
-script: bundle exec rake spec
+script: bundle exec rake test
 rvm:
   - 1.8.7
   - 1.9.3
