--- a/skeleton/.travis.yml
+++ b/skeleton/.travis.yml
@@ -1,11 +1,12 @@
 ---
 language: ruby
-before_install: rm Gemfile.lock
+before_install: rm Gemfile.lock || true
 rvm:
   - 1.8.7
   - 1.9.3
 script: bundle exec rake spec
 env:
   matrix:
-  - PUPPET_VERSION=2.7.23
-  - PUPPET_VERSION=3.1.1
+  - PUPPET_VERSION="~> 2.7.0"
+  - PUPPET_VERSION="~> 3.1.0"
+  - PUPPET_VERSION="~> 3.2.0"
