--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -14,4 +14,5 @@ gem 'puppetlabs_spec_helper'
 gem 'travis'
 gem 'travis-lint'
 gem 'puppet-syntax'
-gem 'puppet', puppetversion
+gem 'puppet', ENV['PUPPET_VERSION'] || '~> 3.2.0'
+gem 'vagrant-wrapper'
