add blacksmith to make module management easier

--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -10,3 +10,4 @@ gem 'travis-lint'
 gem 'puppet-syntax'
 gem 'puppet', ENV['PUPPET_VERSION'] || '~> 3.2.0'
 gem 'vagrant-wrapper'
+gem 'puppet-blacksmith'
