added a opensource group for use with opensource version of puppet

--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -3,11 +3,15 @@ source 'https://rubygems.org'
 gem 'rake'
 gem 'puppet-lint'
 gem 'rspec-puppet'
-gem 'rspec-system-puppet'
 gem 'puppetlabs_spec_helper'
-gem 'travis'
-gem 'travis-lint'
 gem 'puppet-syntax'
-gem 'puppet', ENV['PUPPET_VERSION'] || '~> 3.2.0'
-gem 'vagrant-wrapper'
-gem 'puppet-blacksmith'
+
+group :opensource do
+ gem 'travis'
+ gem 'travis-lint'
+ gem 'puppet-blacksmith'
+ gem 'rspec-system-puppet'
+ gem 'puppet', ENV['PUPPET_VERSION'] || '~> 3.2.0'
+ gem 'vagrant-wrapper'
+ gem 'puppet-blacksmith'
+end
