use the new 1.0.0 version of rspec-puppet

--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -2,7 +2,7 @@ source 'https://rubygems.org'
 
 gem 'rake'
 gem 'puppet-lint'
-gem 'rspec-puppet'
+gem 'rspec-puppet', '~> 1.0.0'
 gem 'rspec-system-puppet'
 gem 'puppetlabs_spec_helper'
 gem 'travis'
