--- a/skeleton/Rakefile
+++ b/skeleton/Rakefile
@@ -12,6 +12,8 @@ PuppetLint.configuration.fail_on_warnings = true
 PuppetLint.configuration.send('disable_class_parameter_defaults')
 # http://puppet-lint.com/checks/class_inherits_from_params_class/
 PuppetLint.configuration.send('disable_class_inherits_from_params_class')
+# http://puppet-lint.com/checks/80chars/
+PuppetLint.configuration.send('disable_80chars')
 
 exclude_paths = [
   "pkg/**/*",
