--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -1,13 +1,18 @@
 source 'https://rubygems.org'
 
-gem 'rake'
-gem 'puppet-lint'
-gem 'rspec-puppet', '~> 1.0.0'
-gem 'rspec-system-puppet'
-gem 'puppetlabs_spec_helper'
-gem 'travis'
-gem 'travis-lint'
-gem 'puppet-syntax'
-gem 'puppet', ENV['PUPPET_VERSION'] || '~> 3.2.0'
-gem 'vagrant-wrapper'
-gem 'puppet-blacksmith'
+group :test do
+  gem 'rake'
+  gem 'puppet-lint'
+  gem 'rspec-puppet', '~> 1.0.0'
+  gem 'rspec-system-puppet'
+  gem 'puppetlabs_spec_helper'
+  gem 'puppet-syntax'
+end
+
+group :development do
+  gem 'travis'
+  gem 'travis-lint'
+  gem 'puppet', ENV['PUPPET_VERSION'] || '~> 3.2.0'
+  gem 'vagrant-wrapper'
+  gem 'puppet-blacksmith'
+end
