--- a/skeleton/.travis.yml
+++ b/skeleton/.travis.yml
@@ -15,6 +15,8 @@ env:
   - PUPPET_VERSION="~> 3.4.0"
 matrix:
   exclude:
+    - rvm: 1.9.3
+      env: PUPPET_VERSION="~> 2.7.0"
     - rvm: 2.0.0
       env: PUPPET_VERSION="~> 2.7.0"
     - rvm: 2.0.0
