--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -1,18 +1,19 @@
-source 'https://rubygems.org'
+source "http://rubygems.org"
 
 group :test do
-  gem 'rake'
-  gem 'puppet-lint'
-  gem 'rspec-puppet', '~> 1.0.0'
-  gem 'rspec-system-puppet'
-  gem 'puppetlabs_spec_helper'
-  gem 'puppet-syntax'
+  gem "rake"
+  gem "puppet", ENV['PUPPET_VERSION'] || '~> 3.4.0'
+  gem "puppet-lint"
+  gem "rspec-puppet", :git => 'https://github.com/rodjek/rspec-puppet.git'
+  gem "puppet-syntax"
+  gem "puppetlabs_spec_helper"
 end
 
 group :development do
-  gem 'travis'
-  gem 'travis-lint'
-  gem 'puppet', ENV['PUPPET_VERSION'] || '~> 3.2.0'
-  gem 'vagrant-wrapper'
-  gem 'puppet-blacksmith'
+  gem "travis"
+  gem "travis-lint"
+  gem "beaker"
+  gem "beaker-rspec"
+  gem "vagrant-wrapper"
+  gem "puppet-blacksmith"
 end
