Travis won't respect the matrix unless you pass the full env

--- a/skeleton/.travis.yml
+++ b/skeleton/.travis.yml
@@ -24,8 +24,8 @@ matrix:
   - rvm: 2.1.0
     env: PUPPET_VERSION="~> 2.7.0"
   - rvm: 2.1.0
-    env: PUPPET_VERSION="~> 3.2.0"
+    env: PUPPET_VERSION="~> 3.2.0" STRICT_VARIABLES=yes
   - rvm: 2.1.0
-    env: PUPPET_VERSION="~> 3.3.0"
+    env: PUPPET_VERSION="~> 3.3.0" STRICT_VARIABLES=yes
   - rvm: 2.1.0
-    env: PUPPET_VERSION="~> 3.4.0"
+    env: PUPPET_VERSION="~> 3.4.0" STRICT_VARIABLES=yes
