--- a/skeleton/Rakefile
+++ b/skeleton/Rakefile
@@ -25,6 +25,7 @@ exclude_paths = [
   "vendor/**/*",
   "spec/**/*",
 ]
+Rake::Task[:lint].clear
 PuppetLint.configuration.ignore_paths = exclude_paths
 PuppetSyntax.exclude_paths = exclude_paths
 
