metadata.json Linting

--- a/skeleton/Rakefile
+++ b/skeleton/Rakefile
@@ -33,9 +33,14 @@ RSpec::Core::RakeTask.new(:acceptance) do |t|
   t.pattern = 'spec/acceptance'
 end
 
+task :metadata do
+  sh "metadata-json-lint metadata.json"
+end
+
 desc "Run syntax, lint, and spec tests."
 task :test => [
   :syntax,
   :lint,
   :spec,
+  :metadata,
 ]
