--- a/skeleton/Rakefile
+++ b/skeleton/Rakefile
@@ -21,6 +21,7 @@ PuppetLint.configuration.send('disable_class_parameter_defaults')
 PuppetLint.configuration.send('disable_class_inherits_from_params_class')
 
 exclude_paths = [
+  "bundle/**/*",
   "pkg/**/*",
   "vendor/**/*",
   "spec/**/*",
