--- a/skeleton/spec/acceptance/nodesets/debian-76-x64.yml
+++ b/skeleton/spec/acceptance/nodesets/debian-76-x64.yml
@@ -5,7 +5,7 @@ HOSTS:
     platform: debian-7-amd64
     box: puppetlabs/debian-7.6-64-nocm
     box_url: https://vagrantcloud.com/puppetlabs/boxes/debian-7.6-64-nocm
-    hypervisor: vagrantHOSTS:
+    hypervisor: vagrant
 
 CONFIG:
   log_level: verbose
