--- a/skeleton/Rakefile
+++ b/skeleton/Rakefile
@@ -1,13 +1,16 @@
 require 'puppetlabs_spec_helper/rake_tasks'
+require 'puppet/vendor/semantic/lib/semantic'
 require 'puppet-lint/tasks/puppet-lint'
 require 'puppet-syntax/tasks/puppet-syntax'
 
-# These two gems aren't always present, for instance
+# These gems aren't always present, for instance
 # on Travis with --without development
 begin
   require 'puppet_blacksmith/rake_tasks'
 rescue LoadError
 end
+
+Rake::Task[:lint].clear
 
 PuppetLint.configuration.relative = true
 PuppetLint.configuration.send("disable_80chars")
