Closes #46, split beaker gems into separate group

--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -11,9 +11,12 @@ end
 group :development do
   gem "travis"
   gem "travis-lint"
-  gem "beaker"
-  gem "beaker-rspec"
   gem "vagrant-wrapper"
   gem "puppet-blacksmith"
   gem "guard-rake"
+end
+
+group :system_tests do
+  gem "beaker"
+  gem "beaker-rspec"
 end
