--- a/skeleton/.travis.yml
+++ b/skeleton/.travis.yml
@@ -15,6 +15,8 @@ env:
   - PUPPET_VERSION="~> 3.4.0" STRICT_VARIABLES=yes
   - PUPPET_VERSION="~> 3.5.0" STRICT_VARIABLES=yes
   - PUPPET_VERSION="~> 3.6.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
 matrix:
   exclude:
   - rvm: 1.9.3
