attempt fix for path for travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 ---
 language: ruby
 before_install:
-  - install.sh
+  - pwd
+  - ./install.sh
   - puppet module generate user-module --skip-interview
 sudo: false
 rvm:
