--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.0
-script: cd user-module; bundle install; bundle exec rake test
+script:
+  - cd user-module
+  - bundle install
+  - bundle exec rake test
 env:
   - PUPPET_VERSION="~> 3.6.0"
   - PUPPET_VERSION="~> 3.7.0"
