--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,13 @@ language: ruby
 before_script:
   - ./install.sh
   - puppet module generate user-module --skip-interview
-  - cd user-module
 sudo: false
 rvm:
   - 1.8.7
   - 1.9.3
   - 2.0.0
   - 2.1.0
-script:
-  - bundle install
-  - bundle exec rake test
+script: ./test.sh
 env:
   - PUPPET_VERSION="~> 3.6.0"
   - PUPPET_VERSION="~> 3.7.0"
