Use rspec-puppet-facts

--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -6,6 +6,7 @@ group :test do
   gem "rspec-puppet", :git => 'https://github.com/rodjek/rspec-puppet.git'
   gem "puppetlabs_spec_helper"
   gem "metadata-json-lint"
+  gem "rspec-puppet-facts"
 end
 
 group :development do
