--- a/skeleton/.travis.yml
+++ b/skeleton/.travis.yml
@@ -25,3 +25,6 @@ matrix:
     env: PUPPET_VERSION="~> 2.7.0"
   - rvm: 2.1.0
     env: PUPPET_VERSION="~> 2.7.0"
+    env: PUPPET_VERSION="~> 3.2.0"
+    env: PUPPET_VERSION="~> 3.3.0"
+    env: PUPPET_VERSION="~> 3.4.0"
