--- a/skeleton/.travis.yml
+++ b/skeleton/.travis.yml
@@ -19,12 +19,20 @@ env:
   - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
 matrix:
   exclude:
+  # Ruby 1.9.3
   - rvm: 1.9.3
     env: PUPPET_VERSION="~> 2.7.0"
+    
+  # Ruby 2.0.0
   - rvm: 2.0.0
     env: PUPPET_VERSION="~> 2.7.0"
+    
+  # Ruby 2.1.0
   - rvm: 2.1.0
     env: PUPPET_VERSION="~> 2.7.0"
+  - rvm: 2.1.0
     env: PUPPET_VERSION="~> 3.2.0"
+  - rvm: 2.1.0
     env: PUPPET_VERSION="~> 3.3.0"
+  - rvm: 2.1.0
     env: PUPPET_VERSION="~> 3.4.0"
