--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -7,6 +7,7 @@ group :test do
   gem "puppetlabs_spec_helper"
   gem "metadata-json-lint"
   gem "rspec-puppet-facts"
+  gem 'rspec', ENV['RSPEC_VERSION'] || '~> 3.0.0'
 end
 
 group :development do
