only ignore certain regex on top level directory

--- a/skeleton/.gitignore
+++ b/skeleton/.gitignore
@@ -1,7 +1,7 @@
 .*.sw?
-pkg
-spec/fixtures
-.rspec_system
-.vagrant
-.bundle
-vendor
+/pkg
+/spec/fixtures
+/.rspec_system
+/.vagrant
+/.bundle
+/vendor
