Add hiera testing lib and fixup metdata rake task

--- a/skeleton/Rakefile
+++ b/skeleton/Rakefile
@@ -3,6 +3,7 @@ require 'puppet/version'
 require 'puppet/vendor/semantic/lib/semantic' unless Puppet.version.to_f < 3.6
 require 'puppet-lint/tasks/puppet-lint'
 require 'puppet-syntax/tasks/puppet-syntax'
+require 'metadata-json-lint/rake_task'
 
 # These gems aren't always present, for instance
 # on Travis with --without development
@@ -43,14 +44,10 @@ task :contributors do
   system("git log --format='%aN' | sort -u > CONTRIBUTORS")
 end
 
-task :metadata do
-  sh "metadata-json-lint metadata.json"
-end
-
 desc "Run syntax, lint, and spec tests."
 task :test => [
+  :metadata_lint,
   :syntax,
   :lint,
   :spec,
-  :metadata,
 ]
