--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -8,7 +8,8 @@ group :test do
   gem "puppetlabs_spec_helper"
   gem "metadata-json-lint"
   gem "rspec-puppet-facts"
-  gem "hiera-puppet-helper"
+  gem "hiera-puppet-helper", :git => 'https://github.com/bobtfish/hiera-puppet-helper.git'
+  gem "rubocop"
 end
 
 group :development do
