--- a/skeleton/spec/acceptance/nodesets/ubuntu-1204-x64.yml
+++ b/skeleton/spec/acceptance/nodesets/ubuntu-1204-x64.yml
@@ -1,5 +1,5 @@
 HOSTS:
-  ubuntu-server-1204-x64:
+  ubuntu-1204-x64:
     roles:
       - master
     platform: ubuntu-1204-amd64
@@ -9,4 +9,5 @@ HOSTS:
 
 CONFIG:
   log_level: verbose
+  color: false
   type: foss
