Add lots of puppet lint plugins from the nice puppet community folks

--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -10,6 +10,13 @@ group :test do
   gem "rspec-puppet-facts"
   gem "hiera-puppet-helper", :git => 'https://github.com/bobtfish/hiera-puppet-helper.git'
   gem "rubocop"
+
+  gem "puppet-lint-absolute_classname-check"
+  gem "puppet-lint-leading_zero-check"
+  gem "puppet-lint-trailing_comma-check"
+  gem "puppet-lint-version_comparison-check"
+  gem "puppet-lint-classes_and_types_beginning_with_digits-check"
+  gem "puppet-lint-unquoted_string-check"
 end
 
 group :development do
