Fix version of rubocop due to conflict with older versions of Puppet

--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -8,7 +8,7 @@ group :test do
   gem "puppetlabs_spec_helper"
   gem "metadata-json-lint"
   gem "rspec-puppet-facts"
-  gem "rubocop"
+  gem 'rubocop', '0.33.0'
   gem 'simplecov'
   gem 'simplecov-console'
 
