Resolve issue with latest version of simplecov changing the API

--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -9,7 +9,7 @@ group :test do
   gem "metadata-json-lint"
   gem "rspec-puppet-facts"
   gem 'rubocop', '0.33.0'
-  gem 'simplecov'
+  gem 'simplecov', '>= 0.11.0'
   gem 'simplecov-console'
 
   gem "puppet-lint-absolute_classname-check"
