--- a/skeleton/.travis.yml
+++ b/skeleton/.travis.yml
@@ -2,6 +2,9 @@
 language: ruby
 bundler_args: --without development system_tests
 before_install: rm Gemfile.lock || true
+branches:
+  only:
+    - master
 rvm:
   - 1.8.7
   - 1.9.3
