add lint test for proper resource reference syntax

--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -18,6 +18,7 @@ group :test do
   gem "puppet-lint-version_comparison-check"
   gem "puppet-lint-classes_and_types_beginning_with_digits-check"
   gem "puppet-lint-unquoted_string-check"
+  gem 'puppet-lint-resource_reference_syntax'
 end
 
 group :development do
