Use future parser for syntax test

--- a/skeleton/Rakefile
+++ b/skeleton/Rakefile
@@ -42,6 +42,7 @@ PuppetLint::RakeTask.new :lint do |config|
 end
 
 PuppetSyntax.exclude_paths = exclude_paths
+PuppetSyntax.future_parser = true
 
 desc "Run acceptance tests"
 RSpec::Core::RakeTask.new(:acceptance) do |t|
