--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -5,6 +5,7 @@ group :test do
   gem "puppet", ENV['PUPPET_GEM_VERSION'] || '~> 3.8.0'
   gem "rspec", '< 3.2.0'
   gem "rspec-puppet", :git => 'https://github.com/rodjek/rspec-puppet.git'
+  gem "puppet-lint", :git => 'https://github.com/rodjek/puppet-lint.git'
   gem "puppetlabs_spec_helper"
   gem "metadata-json-lint"
   gem "rspec-puppet-facts"
