--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -26,6 +26,7 @@ group :development do
   gem "travis-lint"
   gem "puppet-blacksmith"
   gem "guard-rake"
+  gem "listen", "~> 3.0.0"
 end
 
 group :system_tests do
