--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -9,8 +9,7 @@ group :test do
   gem "metadata-json-lint"
   gem "rspec-puppet-facts"
   gem 'rubocop', '0.33.0'
-  gem 'simplecov', '>= 0.11.0'
-  gem 'simplecov-console'
+  gem 'coveralls', :require => false if RUBY_VERSION >= '2.0.0'
 
   gem "puppet-lint-absolute_classname-check"
   gem "puppet-lint-leading_zero-check"
