--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -3,7 +3,7 @@ source ENV['GEM_SOURCE'] || 'https://rubygems.org'
 group :test do
   gem 'rake'
   gem 'puppet', ENV['PUPPET_GEM_VERSION'] || '~> 3.8.0'
-  gem 'rspec', '< 3.2.0'
+  gem 'rspec-core', '< 3.2.0' if RUBY_VERSION < '1.9'
   gem 'rspec-puppet'
   gem 'puppetlabs_spec_helper'
   gem 'metadata-json-lint'
