Unpin rubocop gem to be compatible with latest rake version when ruby >= 2

--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -8,7 +8,11 @@ group :test do
   gem 'puppetlabs_spec_helper'
   gem 'metadata-json-lint'
   gem 'rspec-puppet-facts'
-  gem 'rubocop', '0.33.0'
+  if RUBY_VERSION < '2.0.0'
+    gem 'rubocop', '< 0.42.0'
+  else
+    gem 'rubocop'
+  end
   gem 'simplecov', '>= 0.11.0'
   gem 'simplecov-console'
 
