Fix rubocop criticals

--- a/skeleton/.rubocop.yml
+++ b/skeleton/.rubocop.yml
@@ -168,6 +168,9 @@ Style/ClassAndModuleChildren:
 Style/ClassCheck:
   Enabled: false
 
+Metrics/BlockLength:
+  Enabled: false
+
 Metrics/ClassLength:
   Enabled: false
 
