--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -1,41 +1,37 @@
 source ENV['GEM_SOURCE'] || 'https://rubygems.org'
 
 group :test do
-  gem 'rake'
+  gem 'metadata-json-lint'
   gem 'puppet', ENV['PUPPET_GEM_VERSION'] || '~> 3.8.0'
+  gem 'puppetlabs_spec_helper'
+  gem 'rake'
   gem 'rspec-core', '< 3.2.0' if RUBY_VERSION < '1.9'
   gem 'rspec-puppet'
-  gem 'puppetlabs_spec_helper'
-  gem 'metadata-json-lint'
   gem 'rspec-puppet-facts'
-  if RUBY_VERSION < '2.0.0'
-    gem 'rubocop', '< 0.42.0'
-  else
-    gem 'rubocop'
-  end
+  gem 'rubocop', if RUBY_VERSION < '2.0.0' then '< 0.42.0' end
   gem 'simplecov', '>= 0.11.0'
   gem 'simplecov-console'
 
   gem 'puppet-lint-absolute_classname-check'
-  gem 'puppet-lint-leading_zero-check'
-  gem 'puppet-lint-trailing_comma-check'
-  gem 'puppet-lint-version_comparison-check'
   gem 'puppet-lint-classes_and_types_beginning_with_digits-check'
-  gem 'puppet-lint-unquoted_string-check'
+  gem 'puppet-lint-leading_zero-check'
   gem 'puppet-lint-resource_reference_syntax'
+  gem 'puppet-lint-trailing_comma-check'
+  gem 'puppet-lint-unquoted_string-check'
+  gem 'puppet-lint-version_comparison-check'
 
   gem 'json_pure', '<= 2.0.1' if RUBY_VERSION < '2.0.0'
 end
 
 group :development do
-  gem 'travis'              if RUBY_VERSION >= '2.1.0'
-  gem 'travis-lint'         if RUBY_VERSION >= '2.1.0'
+  gem 'guard-rake' if RUBY_VERSION >= '2.2.5' # per dependency https://rubygems.org/gems/ruby_dep
   gem 'puppet-blacksmith'
-  gem 'guard-rake'          if RUBY_VERSION >= '2.2.5' # per dependency https://rubygems.org/gems/ruby_dep
+  gem 'travis'      if RUBY_VERSION >= '2.1.0'
+  gem 'travis-lint' if RUBY_VERSION >= '2.1.0'
 end
 
 group :system_tests do
   gem 'beaker'
-  gem 'beaker-rspec'
   gem 'beaker-puppet_install_helper'
+  gem 'beaker-rspec'
 end
